--- a/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/List.cshtml
@@ -92,58 +92,58 @@
 </table>
 
 <script type="text/javascript">
-	@*used by widget SmartStore.DataExport::ExportButtonsGeneral.cshtml*@
+	@*used by widget SmartStore.CommonExportProviders::ExportButtonsGeneral.cshtml*@
 	var selectedIds = [];
 
-    $(document).ready(function () {
-        //search button
-        $('#btnSearch').click(function () {
-            //search
-            var grid = $('#manufacturers-grid').data('tGrid');
-            grid.currentPage = 1; //new search. Set page size to 1
-            grid.ajaxRequest();
-            return false;
-        });
+	$(document).ready(function () {
+		//search button
+		$('#btnSearch').click(function () {
+			//search
+			var grid = $('#manufacturers-grid').data('tGrid');
+			grid.currentPage = 1; //new search. Set page size to 1
+			grid.ajaxRequest();
+			return false;
+		});
 
-        $("#@Html.FieldIdFor(model => model.SearchManufacturerName)").keydown(function (event) {
-            if (event.keyCode == 13) {
-                $("#btnSearch").click();
-                return false;
-            }
-        });
+		$("#@Html.FieldIdFor(model => model.SearchManufacturerName)").keydown(function (event) {
+			if (event.keyCode == 13) {
+				$("#btnSearch").click();
+				return false;
+			}
+		});
 
-    	$('#mastercheckbox').click(function () {
-    		$('.checkboxGroups').attr('checked', $(this).is(':checked')).change();
-    	});
+		$('#mastercheckbox').click(function () {
+			$('.checkboxGroups').attr('checked', $(this).is(':checked')).change();
+		});
 
-    	//wire up checkboxes. 
-    	$(document).on('change', '#manufacturers-grid input[type=checkbox][id!=mastercheckbox]', function (e) {
-    		var $check = $(this);
-    		if ($check.is(":checked") == true) {
-    			var checked = jQuery.inArray($check.val(), selectedIds);
-    			if (checked == -1) {
-    				selectedIds.push($check.val());
-    			}
-    		}
-    		else {
-    			var checked = jQuery.inArray($check.val(), selectedIds);
-    			if (checked > -1) {
-    				selectedIds = $.grep(selectedIds, function (item, index) {
-    					return item != $check.val();
-    				});
-    			}
-    		}
-    		updateMasterCheckbox();
-    	});
-    });
+		//wire up checkboxes.
+		$(document).on('change', '#manufacturers-grid input[type=checkbox][id!=mastercheckbox]', function (e) {
+			var $check = $(this);
+			if ($check.is(":checked") == true) {
+				var checked = jQuery.inArray($check.val(), selectedIds);
+				if (checked == -1) {
+					selectedIds.push($check.val());
+				}
+			}
+			else {
+				var checked = jQuery.inArray($check.val(), selectedIds);
+				if (checked > -1) {
+					selectedIds = $.grep(selectedIds, function (item, index) {
+						return item != $check.val();
+					});
+				}
+			}
+			updateMasterCheckbox();
+		});
+	});
 
-    function onDataBinding(e) {
-        var searchModel = {
-        	SearchManufacturerName: $('#@Html.FieldIdFor(model => model.SearchManufacturerName)').val(),
-        	SearchStoreId: $('#@Html.FieldIdFor(model => model.SearchStoreId)').val()
-        };
-        e.data = searchModel;
-    }
+	function onDataBinding(e) {
+		var searchModel = {
+			SearchManufacturerName: $('#@Html.FieldIdFor(model => model.SearchManufacturerName)').val(),
+			SearchStoreId: $('#@Html.FieldIdFor(model => model.SearchStoreId)').val()
+		};
+		e.data = searchModel;
+	}
 
 	function onDataBound(e) {
 		$('#manufacturers-grid input[type=checkbox][id!=mastercheckbox]').each(function () {
