--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/CsvConfiguration.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/CsvConfiguration.cshtml
@@ -43,7 +43,7 @@
 			@Html.SmartLabelFor(x => x.Delimiter)
 		</td>
 		<td class="adminData">
-			@Html.EditorFor(x => x.Delimiter)
+			@Html.TextBoxFor(x => x.Delimiter, new { style = "width: 30px;", maxlength = "2" })
 			@Html.ValidationMessageFor(x => x.Delimiter)
 		</td>
 	</tr>
@@ -52,7 +52,7 @@
 			@Html.SmartLabelFor(x => x.Quote)
 		</td>
 		<td class="adminData">
-			@Html.EditorFor(x => x.Quote)
+			@Html.TextBoxFor(x => x.Quote, new { style = "width: 30px;", maxlength = "2" })
 			@Html.ValidationMessageFor(x => x.Quote)
 		</td>
 	</tr>
@@ -61,7 +61,7 @@
 			@Html.SmartLabelFor(x => x.Escape)
 		</td>
 		<td class="adminData">
-			@Html.EditorFor(x => x.Escape)
+			@Html.TextBoxFor(x => x.Escape, new { style = "width: 30px;", maxlength = "2" })
 			@Html.ValidationMessageFor(x => x.Escape)
 		</td>
 	</tr>
