--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
@@ -8,7 +8,7 @@
 
 <div class="section-header">
     <div class="title">
-		<i class="fa fa-arrow-circle-o-down"></i>
+		<i class="fa fa-upload"></i>
         @T("Common.Export")
     </div>
     <div class="options">
