--- a/src/Presentation/SmartStore.Web/Administration/Views/Import/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Import/Edit.cshtml
@@ -10,7 +10,7 @@
 	<fieldset>
 		<div class="section-header">
 			<div class="title">
-				<i class="fa fa-arrow-circle-o-up"></i>
+				<i class="fa fa-download"></i>
 				@title - @Model.Name @Html.ActionLink("(" + T("Admin.Common.BackToList") + ")", "List")
 			</div>
 			<div class="options">
