--- a/src/Presentation/SmartStore.Web/Administration/Views/Import/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Import/List.cshtml
@@ -8,7 +8,7 @@
 
 <div class="section-header">
     <div class="title">
-		<i class="fa fa-arrow-circle-o-up"></i>
+		<i class="fa fa-download"></i>
         @T("Common.Import")
     </div>
     <div class="options">
